--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <!--FEATURES-->
       <section class="section features">
-        <h2 class="section-title" hidden>Особливості</h2>
+        <h2 class="section-title visually-hidden">Особливості</h2>
         <ul class="section-list">
           <li>
             <h3 class="list-title">увага до деталей</h3>
@@ -106,7 +106,7 @@
       <section class="section team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="section-list">
-          <li>
+          <li class="list-item">
             <img
               src="./images/product-designer.jpeg"
               alt="молодий чоловік в окулярах посміхається"
@@ -116,7 +116,7 @@
             <h3 class="list-title">Ігор Дем'яненко</h3>
             <p class="section-passage" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/frontend-dev.jpeg"
               alt="молода жінка в окулярах посміхається"
@@ -126,7 +126,7 @@
             <h3 class="list-title">Ольга Рєпіна</h3>
             <p class="section-passage" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/marketing.jpeg"
               alt="молодий чоловік посміхається"
@@ -136,7 +136,7 @@
             <h3 class="list-title">Микола Тарасов</h3>
             <p class="section-passage" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="list-item">
             <img
               src="./images/ui-designer.jpeg"
               alt="молодий чоловік посміхається на фоні будівлі"
