--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <main>
       <!-- FILTER-->
       <section class="section filter">
-        <h1 hidden>Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="portfolio list">
           <li>
             <button type="button" class="filter-button filter-list">Усі</button>
@@ -75,7 +75,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">Технокряк</h3>
+              <h2 class="works-title">Технокряк</h2>
               <p class="works-description">Веб-сайт</p></a
             >
           </li>
@@ -87,9 +87,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h3>
+              </h2>
               <p class="works-description">Дизайн</p></a
             >
           </li>
@@ -101,9 +101,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 Ресторан <span lang="en">Seafood</span>
-              </h3>
+              </h2>
               <p class="works-description">Додаток</p></a
             >
           </li>
@@ -115,7 +115,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">Проєкт <span lang="en">Prime</span></h3>
+              <h2 class="works-title">Проєкт <span lang="en">Prime</span></h2>
               <p class="works-description">Маркетинг</p></a
             >
           </li>
@@ -127,7 +127,7 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">Проєкт <span lang="en">Boxes</span></h3>
+              <h2 class="works-title">Проєкт <span lang="en">Boxes</span></h2>
               <p class="works-description">Додаток</p></a
             >
           </li>
@@ -139,9 +139,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 <span lang="en">Inspiration has no Borders</span>
-              </h3>
+              </h2>
               <p class="works-description">Веб-сайт</p></a
             >
           </li>
@@ -153,9 +153,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 Видання <span lang="en">Limited Edition</span>
-              </h3>
+              </h2>
               <p class="works-description">Дизайн</p></a
             >
           </li>
@@ -167,9 +167,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 Проєкт <span lang="en" class="uppercase">lab</span>
-              </h3>
+              </h2>
               <p class="works-description">Маркетинг</p></a
             >
           </li>
@@ -181,9 +181,9 @@
                 width="370"
                 height="294"
               />
-              <h3 class="works-title">
+              <h2 class="works-title">
                 <span lang="en">Growing Business</span>
-              </h3>
+              </h2>
               <p class="works-description">Додаток</p></a
             >
           </li>
